Another quick fix associated with footbar (wrong css class placementand lack of width 100% which made main page with 0 results shift to the right)

--- a/viewer/static/viewer/header.css
+++ b/viewer/static/viewer/header.css
@@ -8,11 +8,6 @@
     overflow: hidden;
 }
 
-.container {
-    max-width: 800px;
-    margin: 72px auto auto;
-}
-
 .nav-bar {
     height: 58px;
     margin: auto;
