--- a/viewer/static/viewer/style.css
+++ b/viewer/static/viewer/style.css
@@ -23,6 +23,12 @@ body {
     flex-direction: column;
 }
 
+.container {
+    max-width: 800px;
+    width: 100%;
+    margin: 72px auto auto;
+}
+
 footer {
     min-height: 24px;
     max-width: 800px;
